[gd_scene load_steps=2 format=3 uid="uid://rtlj6tgg4x7"]

[ext_resource type="Script" path="res://scripts/equipment_panel.gd" id="1_07wja"]

[node name="EquipmentPanel" type="Control"]
layout_mode = 3
anchors_preset = 0
pivot_offset = Vector2(200, 0)
script = ExtResource("1_07wja")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_right = 200.0
offset_bottom = 265.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
alignment = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "equipment"

[node name="CharacterSelect" type="OptionButton" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Slots" type="VBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="righthand" type="HBoxContainer" parent="PanelContainer/VBoxContainer/Slots"]
layout_mode = 2
alignment = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/Slots/righthand"]
layout_mode = 2
text = "right hand
"

[node name="Button" type="Button" parent="PanelContainer/VBoxContainer/Slots/righthand"]
layout_mode = 2
text = "unequip"

[node name="Label2" type="Label" parent="PanelContainer/VBoxContainer/Slots/righthand"]
layout_mode = 2

[node name="lefthand" type="HBoxContainer" parent="PanelContainer/VBoxContainer/Slots"]
layout_mode = 2
alignment = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/Slots/lefthand"]
layout_mode = 2
text = "left hand
"

[node name="Button" type="Button" parent="PanelContainer/VBoxContainer/Slots/lefthand"]
layout_mode = 2
text = "unequip"

[node name="Label2" type="Label" parent="PanelContainer/VBoxContainer/Slots/lefthand"]
layout_mode = 2

[node name="armor" type="HBoxContainer" parent="PanelContainer/VBoxContainer/Slots"]
layout_mode = 2
alignment = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/Slots/armor"]
layout_mode = 2
text = "armor
"

[node name="Button" type="Button" parent="PanelContainer/VBoxContainer/Slots/armor"]
layout_mode = 2
text = "unequip"

[node name="Label2" type="Label" parent="PanelContainer/VBoxContainer/Slots/armor"]
layout_mode = 2

[node name="accessory" type="HBoxContainer" parent="PanelContainer/VBoxContainer/Slots"]
layout_mode = 2
alignment = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/Slots/accessory"]
layout_mode = 2
text = "accessory
"

[node name="Button" type="Button" parent="PanelContainer/VBoxContainer/Slots/accessory"]
layout_mode = 2
text = "unequip"

[node name="Label2" type="Label" parent="PanelContainer/VBoxContainer/Slots/accessory"]
layout_mode = 2

[node name="acessory2" type="HBoxContainer" parent="PanelContainer/VBoxContainer/Slots"]
layout_mode = 2
alignment = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/Slots/acessory2"]
layout_mode = 2
text = "accessory
"

[node name="Button" type="Button" parent="PanelContainer/VBoxContainer/Slots/acessory2"]
layout_mode = 2
text = "unequip"

[node name="Label2" type="Label" parent="PanelContainer/VBoxContainer/Slots/acessory2"]
layout_mode = 2

[node name="HSeparator2" type="HSeparator" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="InventoryList" type="VBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
alignment = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/InventoryList"]
layout_mode = 2
text = "inventory
"

[node name="Button" type="Button" parent="PanelContainer/VBoxContainer/InventoryList"]
layout_mode = 2
